--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="title_home">Home</string>
     <string name="title_alert">Alertas</string>
     <string name="title_notifications">Notificações</string>
+    <string name="title_profile">Perfil</string>
     <string name="app_label">Pesquisa aqui</string>
     <string name="search_hint">Criptomoedas</string>
     <string name="edit_name">Nome Completo</string>
